bobcat (4.01.03)

  * Kevin Brodsky observed that the installation scripts used 'chdir' rather
    than 'cd'. Fixed in this release.

  * Kevin Brodsky also observed that the combined size of all precompiled 
    headers might exceed some disks capacities. The option -P was added to the
    ./build script to prevent the use of precompiled headers.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 05 Oct 2015 20:42:08 +0200

bobcat (4.01.02)

  * Classes pf_iterator and pf_iteratorstream are BigInt dependent, and are
    now ignored when running 'build light'.

  * The arguments and working of './build install' and './build uninstall' was
    changed. Call ./build for a short description, or read INSTALL.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 30 Sep 2015 22.05:58 +0200

bobcat (4.01.01)

  * Reverted back to using .ih header files again. No additional changes.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 24 Sep 2015 13:29:19 +0200

bobcat (4.01.00)

  * Moved primefactors from CLASSES to SSLCLASSES as the class PrimeFactors 
    depends on BigInt, which in turn depends on the SSL library.

  * Added 'build uninstall'. This command only works if, when calling one of
    the 'build install' alternatives and when calling 'build uninstall' the
    environment variable BOBCAT contains the (preferably absolute) filename
    of a file on which installed files and directories are logged.
    Note that 'build (dist)clean' does not remove the file pointed at by the
    BOBCAT environment variable, unless that file happpens to be in a
    directory removed by 'build (dist)clean'. See also the file INSTALL.
    Defining the BOBCAT environment variable as ~/.bobcat usually works
    well. 

  * In addition to the classes mentioned at 4.00.00 the struct LC (bobcat/lc)
    was also removed, as it is now superfluous because of the availability of
    lambda functions:
        LC          (lambda functions)
