@@ -38,48 +38,50 @@ perform the following steps:
 
     4. Run (probably as root) 
 
-            ./build install 'what' 'base'
+            ./build install 'LOG:path' 'what' 'base' 
 
-        to install. Here, 'what' specifies what you want to install.
-        Specify:
-                  x, to install all components,
-        or specify a combination of:
-                   d (documentation),
-                   h (header files),
-                   l (libraries),
-                   m (man-pages)
-        E.g., use 
-            ./build install hl 'base'
-        if you only want to install the header files and the library.
+        to install components of the bobbat library.
 
-        When requesting non-existing elements (e.g., ./build install x was
-        requested, but the man-pages weren't constructed) then these
-        non-existing elements are silently ignored by the installation
-        process.
+        Here, 
+            'LOG:path' is an optional item specifying the absolute or relative
+                path of a log file to contain a log of all installed files (see
+                also the next item). Using LOG:~/.bobcat usually works
+                well. Do not put any blanks between LOG: and the path
+                specification, or protect the LOG: specification by quotes.
 
-        As ./build install's last argument 'base' can be specified: the base
-        directory below which the requested files are installed. This base
-        directory is prepended to the paths #defined in the INSTALL.im
-        file. If 'base' is not specified, then INSTALL.im's #defined paths are
-        used as-is.
+            'what' specifies what you want to install.
+                Specify:
+                          x, to install all components,
+                or specify a combination of:
+                           d (documentation),
+                           h (header files),
+                           l (libraries),
+                           m (man-pages)
+                E.g., use 
+                    ./build install hl 'base'
+                if you only want to install the header files and the library.
+    
+                When requesting non-existing elements (e.g., ./build install x
+                was requested, but the man-pages weren't constructed) then
+                these non-existing elements are silently ignored by the
+                installation process.
 
-        If the environment variable BOBCAT was defined when issuing the
-        `./build install ...' command then a log of all installed files is
-        written to the file indicated by the BOBCAT environment variable (see
-        also the next item).
+            'base' is optional and specifies the base directory below which
+                the requested files are installed. This base directory is
+                prepended to the paths #defined in the INSTALL.im file. If
+                'base' is not specified, then INSTALL.im's #defined paths are
+                used as-is.
 
-        Defining the BOBCAT environment variable as ~/.bobcat usually works
-        well. 
+    5.  Uninstalling previously installed components of Bobcat is easy if a
+        log path (LOG:...) was specified at the `./build install ...'
+        command. In that case, run the command
 
-    5.  Uninstalling previously installed components of Bobcat is easy if the
-        environment variable BOBCAT was defined before issuing the 
-        `./build install ...' command. In that case, run the command
+            ./build uninstall logpath
 
-            ./build uninstall logfile
-
-        where 'logfile' is the file that was written by ./build install.
-        Modified files and non-empty directories are not removed, but the
-        logfile itself is removed following the uninstallation.
+        where 'logpath' specifies the location of the logfile that was
+        written by ./build install.  Modified files and non-empty directories
+        are not removed, but the logfile itself is removed following the
+        uninstallation.
 
 
 Make sure that the bobcat library is found by the loader. By default it is
