@@ -7,7 +7,7 @@ COMMENT(manpage, section, releasedate, archive, short name)
 manpage(FBB::CSV)(3bobcat)(_CurYrs_)(libbobcat-dev__CurVers_-x.tar.gz)
                     (CSV convertor)
 
-manpagename(FBB::CSV)(Convertor for comma separated values)
+manpagename(FBB::CSV)(Converter for comma separated values)
 
 manpagesynopsis()
     bf(#include <bobcat/csv>)nl()
