@@ -73,7 +73,7 @@ reconstructed anymore.
 peer or initiator `in the clear', but encrypted using the long-lasting common
 secret. As the current implementation saves all public information on file,
 it's probably easiest to encrypt the file containing the public information.
-    it() The recipients, having recieved the other party's encrypted public
+    it() The recipients, having received the other party's encrypted public
 information, decrypt it using the long-lasting shared secret and compute the
 the shared key.
     it() As the secret information is not kept, the shared key cannot be
