@@ -21,7 +21,7 @@ facilities offered by sockets.
 
     If the streams that will be associated with the bf(IOStreambuf) object
 support seeking, then the bf(IOStreambuf) will do so to. Seeking might also be
-availble for a single stream (either the bf(std::istream) or the
+available for a single stream (either the bf(std::istream) or the
 bf(std::ostream)). 
 
 When the bf(IOStreambuf) object goes out of scope, its associated
