@@ -99,8 +99,8 @@ used;nl()
 initialized with a buffer of size tt(filterBufSize), using a lower bound
 of 100;nl()
     - The parameter tt(ENGINE) can be used to specify a hardware
-accelleration engine, as supported by the used encryption/decryption
-method. Its default argument value indicates that no hardware accelleration is
+acceleration engine, as supported by the used encryption/decryption
+method. Its default argument value indicates that no hardware acceleration is
 available.
         )
     )
