@@ -20,7 +20,7 @@ bf(std::ostream). The bf(std::istream) is used to read information from the
 server process to which the bf(FBB::LocalClientSocket) connects, The
 bf(std::ostream) is used to send information to the server process to which
 the bf(FBB::LocalClientSocket) connects.  Since a socket may be considered a
-em(file descriptor) the avaiable bf(FBB::IFdStream), bf(FBB::IFdStreamBuf),
+em(file descriptor) the available bf(FBB::IFdStream), bf(FBB::IFdStreamBuf),
 bf(FBB::OFdStream), and bf(FBB::OFdStreamBuf) classes may be used profitably
 here. Note that having available a socket does not mean that this defines the
 communication protocol. It is (still) the responsibility of the programmer to
