@@ -22,7 +22,7 @@ requesting the connection. The socket that is made available is a em(file
 descriptor) which may be used to initialize a bf(std::istream) and/or
 bf(std::ostream). The bf(std::istream) is used to read information from the
 client process; the bf(std::ostream) is used to send information to the client
-process.  Since a socket may be considered a em(file descriptor) the avaiable
+process.  Since a socket may be considered a em(file descriptor) the available
 bf(FBB::IFdStream), bf(FBB::IFdStreamBuf), bf(FBB::OFdStream), and
 bf(FBB::OFdStreamBuf) classes may be used profitably here. Note that having
 available a socket does not mean that this defines the communication
