@@ -78,7 +78,7 @@ tt(reset) has been called.
        Returns tt(true) if offset exceeds the maximum offset of any character
         ever written to the shared memory to which the bf(SharedPos) object
         interfaces. If tt(eof) returns tt(true) information may still be
-        em(written) to the shared memory: writting is possible until the
+        em(written) to the shared memory: writing is possible until the
         maximum shared memory segment offset has been reached.
 
     itb(std::streamsize eos() const)
