@@ -120,7 +120,7 @@ manpagesection(MEMBER FUNCTIONS)
 
     itb(size_t segmentSize() const)
        Returns the size (in bytes) of the shared memory data blocks. The
-        bf(SharedSegment) object can accomodate at most tt(segmentSize() *
+        bf(SharedSegment) object can accommodate at most tt(segmentSize() *
         nBlocks()) bytes.
 
     itb(bool truncate(std::streamsize offset))
