@@ -207,7 +207,7 @@ manpagefiles()
     em(bobcat/stat) - defines the class interface
 
 manpageseealso()
-    bf(bobcat)(7), bf(glob)(3bobcat), bf(stat)(3)
+    bf(bobcat)(7), bf(glob)(3bobcat), bf(stat)(2)
 
 manpagebugs()
     None Reported.
