@@ -3,7 +3,7 @@ void addClasses(string filename)
     list class;
     string elem;
 
-    while (sizeof(class = fgets(filename, (int)class[1])))
+    while (listlen(class = fgets(filename, class)))
     {
         elem = strtok(class[0], " \t\n")[0];
         if (elem != "#")
