@@ -17,7 +17,7 @@ list findAll(string type, string source, string pattern)
 
     entries = backtick(cmd + " " + pattern + " -printf \"%f\\n\"");
 
-    for (idx = sizeof(entries); idx--; )
+    for (idx = listlen(entries); idx--; )
         ret += (list)cutEoln(entries[idx]);
 
     chdir(g_cwd);
