@@ -7,7 +7,7 @@ list inspect(string dstDir, int prefix, list srcList, string library)
 
     oprefix = "./" + dstDir + "/" + (string)prefix;
 
-    for (idx = sizeof(srcList); idx--; )
+    for (idx = listlen(srcList); idx--; )
     {
         g_file  = element(idx, srcList);   
         ofile   = oprefix + change_ext(g_file, "o"); // make o-filename
@@ -52,7 +52,7 @@ void c_compile(string dstDir, int prefix, string srcDir, list cfiles)
                 " -c -o " + srcDir + "/" + dstDir + "/" + (string)prefix;
     md(srcDir + "/" + dstDir);
 
-    for (idx = sizeof(cfiles); idx--; )
+    for (idx = listlen(cfiles); idx--; )
     {
         g_file = element(idx, cfiles);
         
@@ -69,7 +69,7 @@ void std_cpp(string dstDir, int prefix, string srcDir, string library)
     files = inspect(dstDir, prefix, makelist(g_sources), library);  
     chdir(g_cwd);
 
-    if (sizeof(files))
+    if (listlen(files))
         c_compile(dstDir, prefix, srcDir, files);       // compile files
 }
 
