@@ -16,7 +16,7 @@ void man()
 
     printf("    Building the man3 man-pages");
 
-    for (idx = sizeof(yo); idx--; )
+    for (idx = listlen(yo); idx--; )
     {
         yodl = element(idx, yo);
     
