@@ -10,11 +10,11 @@ Required software for building Bobcat 4.00.00:
     libssl-dev, 
     libreadline-dev
 
-    icmake (>= 7.22.01)
+    icmake (>= 8.00.04)
 
 For the man-pages:
 
-    yodl (>= 3.05.01)
+    yodl (>= 3.06.00)
 
 Note: required libraries are C libraries. Since C does not do name mangling
 the mentioned (or more recent) libraries should continue to work with Bobcat
