@@ -1,3 +1,15 @@
+bobcat (4.01.04)
+
+  * build script updated to icmake >= 8.00.04
+
+  * 'build install' supports an optional LOG: argument: the (relative or
+    absolute) path to an installation log file. The environment variable
+    BOBCAT is no longer used.
+
+  * Modified the procedure to install files at their final destinations.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 12 Dec 2015 13:21:43 +0100
+
 bobcat (4.01.03)
 
   * Kevin Brodsky observed that the installation scripts used 'chdir' rather
